fixing misaligned footer and background div for icons
fixes issue #6 and issue #7

--- a/resources/style.css
+++ b/resources/style.css
@@ -45,12 +45,20 @@ body {
   box-sizing:border-box;
   padding:10px;
   background-color: rgba(0, 0, 0, 0.3);
-  margin: auto;
+  left:10vh;
   margin-bottom: 10vh;
   width: 90vw;
   /* Note that this height is temporary while we don't have the code for the icons */
-  height: 70vh;
+  height: 70vh; 
+  position:absolute;
+  overflow-y:scroll;
 }
+
+/* Hide scrollbar (for most browsers) */
+#iconArea::-webkit-scrollbar {
+  display: none;
+}
+
 
 #aboutUsImg {
   position: fixed;
@@ -68,6 +76,7 @@ body {
 #bottomBar {
   position: fixed;
   bottom: 0;
+  left:0;
   width: 100%;
   height: 13vh;
   background: rgb(37,0,83);
@@ -81,7 +90,7 @@ body {
   
 .container {
   display:grid;
-  gap:1vw;
+  gap:.75vw;
   grid-template-columns: repeat(auto-fit, 8vw);
   grid-auto-columns: max-content;
   
